fix list view item too small issue

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -176,7 +176,7 @@ a, a:hover, a:focus, a:link, a:visited, a:active{
 	/*font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif; */
     font-weight: 300;
 	text-align: center;
-	padding: 0.3em;
+	padding: 0.1em;
 	margin: 0.1em;
 	/*background-color: rgba(222,222,222,0.4);*/
 	border: 0em;
@@ -198,7 +198,7 @@ a, a:hover, a:focus, a:link, a:visited, a:active{
 .catPanel{
 	font-size : 2.2em;
 }
-.itemPanel{
+.itPanel{
 	font-size : 1.8em;
 }
 
